@@ -1,3 +1,10 @@
+2004-07-10  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* pkgIndex.tcl: Specify Tcl >= 8.2
+	* ident.test:   Added cleanupTests so it reports the test stats.
+	* ident.tcl:    Changed the package name to 'ident' to correspond
+	                with the namespace name. Added license declaration.
+
 2004-07-09  Reinhard Max  <max@suse.de>
 
 	* ident.tcl:   Ident client implementation, test suite,
